--- a/css/index.css
+++ b/css/index.css
@@ -85,6 +85,10 @@ main {
   list-style: none;
 }
 
+.section-member > ul > li:hover {
+  cursor: pointer;
+}
+
 .section-member > ul > li a {
   color: black;
 	text-decoration-line: none;
@@ -127,14 +131,22 @@ main {
 }
 
 .section-member-card-member-info-name {
+  max-width: 100px;
   font-size: 18px;
   font-weight: 700;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .section-member-card-member-info-mbti {
+  max-width: 50px;
   display: flex;
   align-items: center;
   font-size: 16px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .section-member-card-member-date {
@@ -284,6 +296,7 @@ main {
   border: 2px solid #7AC142;
   border-radius: 1rem;
   font-size: 14px;
+  cursor: pointer;
 }
 
 .section-guest-list {
